--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -16,6 +16,44 @@ title: Kassiopé Project
     
     <br><br>
 
+    <h3>20th April 2018</h3>
+      <br>
+      <p>Hello!</p>
+
+      <p>Give a man some fruit and he will eat for a day, teach a man to plant seeds, he will nurture humanity for a lifetime.</p>
+
+      <p style="text-indent: 3em;">We have finally returned to Ahmedabad and so has summer. It is 42 degrees Celsius, and the heat weighs on us just as much during the day as it does when we attempt to sleep at night - Manav Sadhna is projecting the heat to climax between 45-48 degrees Celsius in the next two to three weeks. The city goes to rest at 10Am and wakes up at 6Pm as the sun starts setting. This however, will not stop us from undertaking the next step of our project.</p>
+
+      <p style="text-indent: 3em;">Bastien, a french optometrist from Levisiologiste reaches Ahmedabad tonight at 4AM. We will start the second session on Monday morning. It will be composed of two parts:</p>
+
+      <p style="text-indent: 3em;">First, we will carry out full eye check ups for the Paravyan Mitra women of two slum communities, whom a good friend of ours has been working to alleviate for the past four years. Let me explain who these women are and why they are so important. The typical day of a Paravyan Mitra women goes accordingly: she wakes up at 3Am to pick up rags and plastic from the streets, bending down thousands of times and carrying over 20 or so kgs of plastic before the sun even rises. If they are not abused of financially by their retailers, they earn enough money to send a few of their children to school. By the time the rest of the family is up, she has breakfast cooked and she can move on to further daily chores, washing, cleaning, tending to domestic animals, tending to her children, buying food, more cooking... remember the 42 degrees celcius of heat. She may be able to rest after sundown be all her children asleep and her husband not drunk under the high alcohol rates that animate the slums in the evening. A day when you don’t ragpick is a day when you may not eat; 365 days of work per year, yet they continually maintain a smile upon their faces. These women may need socio-economic empowerment, but physically and mentally they are the ones empowering us through what they have to teach about their lives’ dedication to cleanliness, tolerance and human resilience. These are the women we would like to nurture and give attention to over the next few weeks.</p>
+
+      <p style="text-indent: 3em;">Second, we project to meet with a few universities from Ahmedabad with the ambition to start a long term partnership between Manav Sadhna, Kassiopé, Levisiologiste and an Ahmedabad university. The Kassiopé project will only be sustainable the day that eye exams are carried out by the local population independently from our help. Therefore we would like to get a new local party involved in our attempt to bring eye-care the socio-economically marginalized.</p>
+
+      <p>A heartfelt thank you,
+      <br>The Kassiopé Team</p>
+
+      <br><br>
+
+      <p>Here a few pictures of the women who empower us:</p>
+
+      <br>
+
+      <div class="container-fluid">
+
+          <div class="col-md-6">
+              <%= image_tag "update20avril-1.jpg", class:"img-blog-2018", alt:"Humans" %>
+              <%= image_tag "update20avril-3.jpg", class:"img-blog-2018", alt:"Humans" %>
+          </div>
+          <div class="col-md-6">
+              <%= image_tag "update20avril-2.jpg", class:"img-blog-2018", alt:"Humans" %>
+              <%= image_tag "update20avril-4.jpg", class:"img-blog-2018", alt:"Humans" %>
+          </div>
+      </div>
+
+
+    <br><br>
+
     <h3>16th April 2018</h3>
       <br>
       <p>Hello!</p>
@@ -55,7 +93,7 @@ title: Kassiopé Project
     <div class="container-fluid">
 
         <div class="col-md-6">
-            <%= image_tag "update5mars-2.jpg", class:"img-blog-2018", alt:"HumansR" %>
+            <%= image_tag "update5mars-2.jpg", class:"img-blog-2018", alt:"Humans" %>
             <%= image_tag "update5mars-4.jpg", class:"img-blog-2018", alt:"Humans" %>
         </div>
         <div class="col-md-6">
