--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -31,18 +31,58 @@ title: Kassiopé Project
           <p style="text-indent: 3em;">
             Notre aventure 2018 en Inde est en cours avec différente phases du projet qui se mettent en place petit à petit. Nous postons reguliérement sur cette page ainsi que sur Facebook et Instagram.
           </p>
+          <br>
+
+          <div class="container-fluid">
+
+          	<h3>20 avril 2018</h3>
+          		<br>
+          		<p>Bonjour à tous,</p>
+
+          		<p>Si tu donnes un poisson à un homme, il mangera un jour. Si tu lui apprend à pêcher, il mangera toujours.</p>
+
+          		<p style="text-indent: 3em;">Nous sommes maintenant revenu sur Ahmedabad, en même temps que l’été. Il fait 42 °C, et la chaleur nous affecte autant la journée que la nuit lorsque nous essayons de dormir. La chaleur ne va faire que d’augmenter sur les prochaines semaines jusqu’a culminer à 45-48°C d’ici peu. La vie en ville s’arrête vers 10h et reprend vers 18h lorsque le soleil se couche. Cependant, cela ne nous empêchera pas de continuer les prochaines étapes de notre projet.</p>
+
+          		<p style="text-indent: 3em;">Bastien, un optométriste venu de France, arrive cette nuit vers 4h. Nous allons commencer notre seconde session lundi matin. Elle sera composé de deux parties:</p>
+
+          		<p style="text-indent: 3em;">Premièrement, nous allons entreprendre des test visuels sur les femmes Paravyan Mitra dans deux communautés des bidons-villes, aves lesquelles un bon ami travaille depuis quatre ans, afin de les soutenir et de les soulager dans leur dure labeur. Voici un peu plus de détails sur qui sont ces femmes et pourquoi elles sont si importantes. Le quotidien d’une Paravyan Mitra commence à 3h du matin pour ramasser des déchets et détritus dans les rues, en se penchant plusieurs milliers de fois et en portant plus de 20kg de plastique avant même que le soleil se soit levé. Si elle n’est pas surexploité par la personnes a qui elle vend le plastique, elle peut gagner assez d’argent pour envoyer quelqu’uns de ses enfants à l’école. Au moment où tout le reste de sa famille est levé, elle a également cuisiné le petit-déjeuner et entrepris le reste de ses tâches ménagères (nettoyage, lavage, s’occuper des quelques animaux que possèdent la famille, s’occuper des enfants, faire les courses…etc). Tout ça sous 42 °C! Elle pourra peut-être se reposer un peu une fois le soleil couché si tout ces enfants dorment et que sont mari n’est pas saoul dû aux flots d’alcool qui animent les soirées des bidons-villes. Un jour où une Paravyan Mitra ne ramassent pas de déchets est un jour où elle ne pourra pas manger. Elle travaille donc 365 jours par an tout en gardant le sourire. Ces femmes ont peut-être besoin d’aide socio-économique mais physiquement et mentalement ce sont elles qui nous motivent et nous aident à travers ce qu’elles nous apprennent sur la dedication de tout une vie envers la propreté, la tolérance et la résilience humaine. Voici donc les femmes sur lesquelles nous aimerions travailler sur les prochaines semaines.</p>
+
+          		<p style="text-indent: 3em;">Deuxièmement, nous projetons de rencontrer quelques universités d’Ahmedabad avec l’ambition de créer un partenariat sur le long-terme entre Manav Sadhna, Kassiopé, LeVisiologiste et une université d’Ahmedabad. Le projet Kassiopé ne sera durable que le jour où les tests visuels seront entrepris par la population locale, indépendamment de notre aide. C’est pour cela que nous aimerions introduire un nouveau partenaire local pour nous aider dans notre projet d’amener des soins oculaires aux populations marginalisées.</p>
+
+          		<p>Un grand merci à tous,
+          		<br>L’équipe Kassiopé</p>
+
+          		<br><br>
+
+          		<p>Voici quelques photos de ces femmes qui nous inspirent tant:</p>
+
+          		<br>
+
+          		<div class="container-fluid">
+
+            		<div class="col-md-6">
+                  		<%= image_tag "update20avril-1.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+                  		<%= image_tag "update20avril-3.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+                	</div>
+            		<div class="col-md-6">
+                  		<%= image_tag "update20avril-2.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+                  		<%= image_tag "update20avril-4.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+                	</div>
+              </div>
+
+          </div>
 
           <br>
           <div class="container-fluid">
 
           	<h3>16 avril 2018</h3>
-          	<br>
-          	<p>Bonjour à tous,</p>
+          		<br>
+          		<p>Bonjour à tous,</p>
 
-          	<p style="text-indent: 3em;">Nous avons reçu de belles nouvelles la semaine dernière en apprenant les résultats du Défi Jeunes organisé par la mairie de Saint Germain en Laye! Après notre dossier de candidature envoyé en mars et un Skype fait sur 3 différents continents en même temps, nous sommes heureux d’apprendre que nous avons remporter le premier prix de la compétition! Nous remercions généreusement le conseil municipal de Saint Germain en Laye pour leur gracieuse aide financière de 1000 euros et également pour leur volonté de motiver les jeunes à agir, entreprendre et créer avec l’instauration du Défi Jeunes. Ce prix sera utilisé pour amener un nouvel optométriste en Inde mais également à l’achat de nouvelles paires de lunettes pour nos patients. Nous allons continuer notre travail pour prouver que, lorsque attribuées aux jeunes, ces opportunités créent de magnifiques résultats.</p>
+          		<p style="text-indent: 3em;">Nous avons reçu de belles nouvelles la semaine dernière en apprenant les résultats du Défi Jeunes organisé par la mairie de Saint Germain en Laye! Après notre dossier de candidature envoyé en mars et un Skype fait sur 3 différents continents en même temps, nous sommes heureux d’apprendre que nous avons remporter le premier prix de la compétition! Nous remercions généreusement le conseil municipal de Saint Germain en Laye pour leur gracieuse aide financière de 1000 euros et également pour leur volonté de motiver les jeunes à agir, entreprendre et créer avec l’instauration du Défi Jeunes. Ce prix sera utilisé pour amener un nouvel optométriste en Inde mais également à l’achat de nouvelles paires de lunettes pour nos patients. Nous allons continuer notre travail pour prouver que, lorsque attribuées aux jeunes, ces opportunités créent de magnifiques résultats.</p>
 
-          	<p>Un grand merci à tous,
-          	<br>L’équipe Kassiopé</p>
+          		<p>Un grand merci à tous,
+          		<br>L’équipe Kassiopé</p>
 
           </div>
 
@@ -91,6 +131,7 @@ title: Kassiopé Project
             </div>
 
 
+          <br>
           <div class="container-fluid">
 
             <h3>7 février 2018</h3>
@@ -138,6 +179,7 @@ title: Kassiopé Project
             </div>
 
 
+      <br>
       <div class="container-fluid">
         <br>
             <h3>29 janvier 2018</h3>
