new image name system

--- a/source/en/en-about_us.html.erb
+++ b/source/en/en-about_us.html.erb
@@ -9,7 +9,7 @@ title: Kassiopé Project
 
 <body>
   <div class="photo-us">
-    <%= image_tag "nous.jpg", class:"photo-of-us", alt:"Photo of our team" %>
+    <%= image_tag "aboutus-1.jpg", class:"photo-of-us", alt:"Photo of our team" %>
   </div>
 
   <div class="about-us-text primary-text">
