--- a/source/fr-about_us.html.erb
+++ b/source/fr-about_us.html.erb
@@ -10,7 +10,7 @@ title: Kassiopé Project
 
 <body>
     <div class="photo-us">
-      <%= image_tag "nous.jpg", class:"photo-of-us", alt:"Photo de notre équipe" %>
+      <%= image_tag "aboutus-1.jpg", class:"photo-of-us", alt:"Photo de notre équipe" %>
     </div>
 
     <div class="about-us-text primary-text">
