--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -164,16 +164,16 @@ title: Kassiopé Project
           <div class="container-fluid">
 
             <div class="col-md-6">
-                  <%= image_tag "test_visuel.jpg", class:"img-blog-2018", alt:"Matthew executant un test d'acuité visuel" %>
+                  <%= image_tag "update7fevrier-1.jpg", class:"img-blog-2018", alt:"Matthew executant un test d'acuité visuel" %>
                   <p><br>Matthew et Fiona (notre orthoptiste) faisant les tests d'acuité visuelle sur les premiers patients mercredi<br><br><br><br></p>
-                  <%= image_tag "matthew_et_fiona.jpg", class:"img-blog-2018", alt:"Matthew et Fiona montrant les lettres du tests" %>
+                  <%= image_tag "update7fevrier-2.jpg", class:"img-blog-2018", alt:"Matthew et Fiona montrant les lettres du tests" %>
                 </div>
               <div class="col-md-6">
-                  <%= image_tag "fiona_lunettes.jpg", class:"img-blog-2018", alt:"Fiona régle des lunettes" %>
+                  <%= image_tag "update7fevrier-3.jpg", class:"img-blog-2018", alt:"Fiona régle des lunettes" %>
                 </div>
                 <br>
                 <div class="col-md-6">
-                  <%= image_tag "matthew_regle_lunettes.jpg", class:"img-blog-2018", alt:"Matthew régle des lunettes" %>
+                  <%= image_tag "update7fevrier-4.jpg", class:"img-blog-2018", alt:"Matthew régle des lunettes" %>
                 </div>
               </div>
             </div>
@@ -205,15 +205,15 @@ title: Kassiopé Project
           <div class="container-fluid">
 
             <div class="col-md-6">
-                  <%= image_tag "Filles.jpg", class:"img-blog-2018", alt:"Des filles du centre nous souhaitant aurevoir" %>
+                  <%= image_tag "update29janvier-1.jpg", class:"img-blog-2018", alt:"Des filles du centre nous souhaitant aurevoir" %>
                   <p><br><br>Quelques photos d'enfants que nous avons rencontré dans les bidons-villes et les différents centres de Manav Sadhna<br><br><br></p>
-                  <%= image_tag "petite_fille_qui_marche.jpg", class:"img-blog-2018", alt:"Petite fille se baladant dans le centre" %>
+                  <%= image_tag "update29janvier-2.jpg", class:"img-blog-2018", alt:"Petite fille se baladant dans le centre" %>
                 </div>
                 <div class="col-md-6">
-                  <%= image_tag "enfants_attendent.jpg", class:"img-blog-2018", alt:"Un groupe d'écoliers attendant tous dans la même direction" %>
+                  <%= image_tag "update29janvier-3.jpg", class:"img-blog-2018", alt:"Un groupe d'écoliers attendant tous dans la même direction" %>
                 </div>
                 <div class="col-md-6">
-                <%= image_tag "conversation.jpg", class:"img-blog-2018", alt:"Conversation avec une fille du centre" %>
+                <%= image_tag "update29janvier-4.jpg", class:"img-blog-2018", alt:"Conversation avec une fille du centre" %>
                 </div>
               </div>
 
@@ -249,12 +249,12 @@ title: Kassiopé Project
             <div class="row">
 
               <div class="col-xs-6">
-                  <%= image_tag "heart-kids.JPG", class:"heart-kids img-blog", alt:"Enfants forment un coeur avec leurs mains" %>
+                  <%= image_tag "jour1-1.jpg", class:"heart-kids img-blog", alt:"Enfants forment un coeur avec leurs mains" %>
               </div>
 
 
               <div class="col-xs-6">
-                  <%= image_tag "slum-us.JPG", class:"slum-us img-blog", alt:"Clement, Pierre et Matthew marchent dans le bidonville" %>
+                  <%= image_tag "jour1-2.jpg", class:"slum-us img-blog", alt:"Clement, Pierre et Matthew marchent dans le bidonville" %>
               </div>
 
             </div>
@@ -279,11 +279,11 @@ title: Kassiopé Project
             Une première expérience sur le terrain qui commence donc plutôt bien.
 
             <div class="col-xs-6">
-              <%= image_tag "matthew-explain.JPG", class:"img-blog", alt:"Matthew apprend aux volontaires notre démarche de tests visuels" %>
+              <%= image_tag "jour2-1.jpg", class:"img-blog", alt:"Matthew apprend aux volontaires notre démarche de tests visuels" %>
             </div>
 
             <div class="col-xs-6">
-              <%= image_tag "kids2.JPG", class:"img-blog", alt:"Groupe d'enfants souriants" %>
+              <%= image_tag "jour2-2.jpg", class:"img-blog", alt:"Groupe d'enfants souriants" %>
             </div>
       </p>
 
@@ -309,11 +309,11 @@ title: Kassiopé Project
       </p>
 
         <div class="col-xs-6">
-            <%= image_tag "viren-reunion.JPG", class:"img-blog", alt:"Reunion du samedi matin autour du fondateur Viren" %>
+            <%= image_tag "weekend1-1.jpg", class:"img-blog", alt:"Reunion du samedi matin autour du fondateur Viren" %>
         </div>
 
         <div class="col-xs-6">
-          <%= image_tag "heart-tong.JPG", class:"img-blog", alt:"Coeur avec les tongs des enfants dans l'école" %>
+          <%= image_tag "weekend1-2.jpg", class:"img-blog", alt:"Coeur avec les tongs des enfants dans l'école" %>
         </div>
 
         <h3>Jour 5</h3>
@@ -326,7 +326,7 @@ title: Kassiopé Project
       </p>
 
         <div class="col-xs-12">
-            <%= image_tag "slum-pano.JPG", class:"img-blog", alt:"Bidonville du premier community center en panorama" %>
+            <%= image_tag "jour5-1.jpg", class:"img-blog", alt:"Bidonville du premier community center en panorama" %>
         </div>
 
         <h3>Jour 6</h3>
@@ -343,11 +343,11 @@ title: Kassiopé Project
         </p>
 
         <div class="col-sm-6">
-            <%= image_tag "eye-tests.JPG", class:"img-blog", alt:"Clement et Matthew font les tests visuels sur des enfants" %>
+            <%= image_tag "jour6-1.jpg", class:"img-blog", alt:"Clement et Matthew font les tests visuels sur des enfants" %>
         </div>
 
         <div class="col-sm-6">
-            <%= image_tag "mirch-masala-group.jpg", class:"img-blog", alt:"Photo de notre groupe au restaurant Mirch Masala" %>
+            <%= image_tag "jour6-2.jpg", class:"img-blog", alt:"Photo de notre groupe au restaurant Mirch Masala" %>
         </div>
 
         <h3>Jour 7</h3>
@@ -365,10 +365,10 @@ title: Kassiopé Project
         </p>
 
         <div class="col-xs-6">
-          <%= image_tag "slum-dirty.JPG", class:"img-blog", alt:"Bidonville" %>
+          <%= image_tag "jour7-1.jpg", class:"img-blog", alt:"Bidonville" %>
         </div>
         <div class="col-xs-6">
-            <%= image_tag "invitation-slum.jpg", class:"img-blog", alt:"Photo de notre groupe invité au bidonville où on nous a servi du thé masala délicieux" %>
+            <%= image_tag "jour7-2.jpg", class:"img-blog", alt:"Photo de notre groupe invité au bidonville où on nous a servi du thé masala délicieux" %>
         </div>
 
         <h3>Jour 8</h3>
@@ -382,7 +382,7 @@ title: Kassiopé Project
             le plein de Masala Tea, le thé local qu'on déguste tous les jours ici, ainsi que de vêtements indiens.
         </p>
         <div class="col-xs-12">
-            <%= image_tag "children-sponsor.jpg", class:"img-blog", alt:"Tous les enfants de l'école portent les affiches de nos partenaires" %>
+            <%= image_tag "jour8-1.jpg", class:"img-blog", alt:"Tous les enfants de l'école portent les affiches de nos partenaires" %>
         </div>
 
         <h3>Week-end 2</h3>
@@ -404,17 +404,17 @@ title: Kassiopé Project
             Après cela, on rentre chez la mère du correspondant qui nous a montré ces temples et l'on fini notre journée avec un repas indien.
         </p>
         <div class="col-sm-6">
-            <%= image_tag "tunique.jpg", class:"img-blog", alt:"Tuniques indiennes" %>
+            <%= image_tag "weekend2-1.jpg", class:"img-blog", alt:"Tuniques indiennes" %>
         </div>
         <div class="col-xs-6">
-            <%= image_tag "adalaj-step-well.jpg", class:"img-blog", alt:"Adalaj step-well" %>
+            <%= image_tag "weekend2-2.jpg", class:"img-blog", alt:"Adalaj step-well" %>
         </div>
 
         <div class="col-sm-6">
-            <%= image_tag "sikh-bandana.jpg", class:"img-blog", alt:"Le groupe kassiopé avec les bandanas de la religion Sikh" %>
+            <%= image_tag "weekend2-3.jpg", class:"img-blog", alt:"Le groupe kassiopé avec les bandanas de la religion Sikh" %>
         </div>
         <div class="col-xs-6">
-            <%= image_tag "sikh-temple.jpg", class:"img-blog", alt:"Temple Sikh" %>
+            <%= image_tag "weekend2-4.jpg", class:"img-blog", alt:"Temple Sikh" %>
         </div>
 
         <h3>Jour 11</h3>
@@ -428,10 +428,10 @@ title: Kassiopé Project
             notre mission humanitaire le lendemain.
         </p>
         <div class="col-sm-5">
-            <%= image_tag "manav-food.jpg", class:"img-blog", alt:"Repas du midi à Manav Sadhna" %>
+            <%= image_tag "jour11-1.jpg", class:"img-blog", alt:"Repas du midi à Manav Sadhna" %>
         </div>
         <div class="col-sm-7">
-            <%= image_tag "mirch-masala-food.jpg", class:"img-blog", alt:"Diner au restaurant Mirch Masala" %>
+            <%= image_tag "jour11-2.jpg", class:"img-blog", alt:"Diner au restaurant Mirch Masala" %>
         </div>
 
 
@@ -445,16 +445,16 @@ title: Kassiopé Project
             d'ambiance nous marque beaucoup. On découvre réellement les différences sociales et financières entre les indiens.
         </p>
         <div class="col-sm-7">
-            <%= image_tag "kids-pierre-clement.jpg", class:"img-blog", alt:"Photo de Pierre et Clément avec des enfants de l'école" %>
+            <%= image_tag "jour12-1.jpg", class:"img-blog", alt:"Photo de Pierre et Clément avec des enfants de l'école" %>
         </div>
         <div class="col-xs-5">
-            <%= image_tag "monkey.JPG", class:"img-blog", alt:"Singe se baladant autour du centre" %>
+            <%= image_tag "jour12-2.jpg", class:"img-blog", alt:"Singe se baladant autour du centre" %>
         </div>
         <div class="col-sm-6">
-            <%= image_tag "hyatt-group.jpg", class:"img-blog", alt:"Notre groupe au Hyatt hotel" %>
+            <%= image_tag "jour12-3.jpg", class:"img-blog", alt:"Notre groupe au Hyatt hotel" %>
         </div>
         <div class="col-xs-6">
-            <%= image_tag "hyatt-food.jpg", class:"img-blog", alt:"Repas au restraurant du Hyatt hotel" %>
+            <%= image_tag "jour12-4.jpg", class:"img-blog", alt:"Repas au restraurant du Hyatt hotel" %>
         </div>
 
         <h3>Jour 13</h3>
@@ -475,10 +475,10 @@ title: Kassiopé Project
         </p>
 
         <div class="col-xs-7">
-            <%= image_tag "env-tests.png", class:"img-blog", alt:"Tests de lecture au centre de filles" %>
+            <%= image_tag "jour13-1.jpg", class:"img-blog", alt:"Tests de lecture au centre de filles" %>
         </div>
         <div class="col-xs-5">
-            <%= image_tag "gandhi-meditating.jpg", class:"img-blog", alt:"Tableau de Gandhi en pleine méditation" %>
+            <%= image_tag "jour13-2.jpg", class:"img-blog", alt:"Tableau de Gandhi en pleine méditation" %>
         </div>
 
         <h3>Jour 14</h3>
@@ -498,10 +498,10 @@ title: Kassiopé Project
         </p>
 
         <div class="col-xs-6">
-          <%= image_tag "vache-tuktuk.jpg", class:"img-blog", alt:"Une vache marche à côté d'un tuk-tuk" %>
+          <%= image_tag "jour14-1.jpg", class:"img-blog", alt:"Une vache marche à côté d'un tuk-tuk" %>
         </div>
         <div class="col-xs-6">
-          <%= image_tag "vishallah.jpg", class:"img-blog", alt:"Repas au restaurant Vishallah" %>
+          <%= image_tag "jour14-2.jpg", class:"img-blog", alt:"Repas au restaurant Vishallah" %>
         </div>
 
         <h3>Retour en France</h3>
