--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -52,17 +52,17 @@ title: Kassiopé Project
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "rub.svg", class: "logo-homepage" %>
+                <%= image_tag "index-logo1(rubik's).svg", class: "logo-homepage" %>
                 <p>Chaque activité quotidienne devient une épreuve!</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "read-book-logo.svg", class: "logo-homepage" %>
+                <%= image_tag "index-logo2(book).svg", class: "logo-homepage" %>
                 <p>La cataracte est la première cause de cécité dans le monde!</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-                <%= image_tag "glasses.svg", class: "logo-homepage" %>
+                <%= image_tag "index-logo3(glasses).svg", class: "logo-homepage" %>
                 <p>Les lunettes ne sont pas abordables!</p>
               </div>
             </div>
@@ -89,7 +89,7 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-5 col-sm-4">
-              <%= image_tag "groupe-enfants.jpg", class: "hidden-xs" %>
+              <%= image_tag "index-1.jpg", class: "hidden-xs" %>
             </div>
 
           </div>
@@ -103,7 +103,7 @@ title: Kassiopé Project
           <div class="row">
 
             <div class="us-img text-center col-sm-5">
-              <%= image_tag "matt.png", class: "img-rounded hidden-xs" %>
+              <%= image_tag "index-2.jpg", class: "img-rounded hidden-xs" %>
             </div>
 
 
