--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: image-url("flamme.jpg");
+  background-image: image-url("action-background.jpg");
   opacity: 1;
   background-size: cover;
   height: 450px;
