--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -7,7 +7,7 @@ html, body {
 }
 
 #wrapper {
-  background-image: image-url("girl-reading-cut.png");
+  background-image: image-url("index-background.png");
   background-size: cover;
   height: auto;
   min-height: 100%;
