--- a/source/en/en-index.html.erb
+++ b/source/en/en-index.html.erb
@@ -54,17 +54,17 @@ title: Kassiopé Project
           <div class="container-fluid">
             <div class="row">
               <div class="challenge scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "rub.svg", class: "logo-homepage", alt: "Rubikube"%>
+                <%= image_tag "index-logo1(rubik's).svg", class: "logo-homepage", alt: "Rubikube"%>
                 <p>Every daily task becomes a challenge!</p>
               </div>
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
-                <%= image_tag "read-book-logo.svg", class: "logo-homepage", alt: "Books"%>
+                <%= image_tag "index-logo2(book).svg", class: "logo-homepage", alt: "Books"%>
                 <p>Cataract is the first cause for blindness in the world!</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
-                <%= image_tag "glasses.svg", class: "logo-homepage", alt: "Glasses"%>
+                <%= image_tag "index-logo3(glasses).svg", class: "logo-homepage", alt: "Glasses"%>
                 <p>Glasses are not affordable!</p>
               </div>
             </div>
@@ -91,7 +91,7 @@ title: Kassiopé Project
             </div>
 
             <div class="action-img text-center col-md-5 col-sm-4">
-              <%= image_tag "groupe-enfants.jpg", class: "hidden-xs", alt: "Indian girl"%>
+              <%= image_tag "index-1.jpg", class: "hidden-xs", alt: "Indian girl"%>
             </div>
 
           </div>
@@ -105,7 +105,7 @@ title: Kassiopé Project
           <div class="row">
 
             <div class="us-img text-center col-sm-5">
-              <%= image_tag "matt.png", class: "img-rounded hidden-xs" %>
+              <%= image_tag "index-2.jpg", class: "img-rounded hidden-xs" %>
             </div>
 
 
