--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -504,14 +504,16 @@ title: Kassiopé Project
           <%= image_tag "jour14-2.jpg", class:"img-blog", alt:"Repas au restaurant Vishallah" %>
         </div>
 
+        <br>
         <h3>Retour en France</h3>
+        <br><br>
         <div class="container-fluid">
           <div class="row">
               <div class="col-xs-6">
                 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.644980319000852%26type%3D3&width=500" width="500" height="816" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
               </div>
               <div class="col-xs-6">
-                <%= image_tag "screen-pdf-essential.png", class:"", alt:"Essentiel de notre voyage en une page", width:"560px", height:"800px" %>
+                <%= image_tag "retour_en_france.jpg", class:"", alt:"Essentiel de notre voyage en une page", width:"560px", height:"800px" %>
               </div>
           </div>
         </div>
