--- a/source/en/en-press.html.erb
+++ b/source/en/en-press.html.erb
@@ -15,14 +15,14 @@ title: Kassiopé Project
     <h3>Project 2018:</h3>
     <p>Published in the Journal de Saint-Germain on the 2nd of February 2018</p>
     <div class="article_presse">
-      <%= image_tag "article_journalstgermain2018.png", class:"article_journalstgermain2018" %>
+      <%= image_tag "article_journalstgermain2018.jpg", class:"article_journalstgermain2018" %>
     </div>
     <a href="https://www.saintgermainenlaye.fr/617/journal-de-saint-germain.htm" target="_blank">Read Online article (Number 721)</a>
 
     <br><br>
     <p>Published in the Courrier des Yvelines on the 18th of January 2018</p>
     <div class="article_presse">
-      <%= image_tag "article_courrieryvelines2018.png", class:"article_courrieryvelines2018" %>
+      <%= image_tag "article_courrieryvelines2018.jpg", class:"article_courrieryvelines2018" %>
     </div>
     <a href="https://actu.fr/ile-de-france/saint-germain-en-laye_78551/un-projet-humanitaire-saint-germain-laye-veut-redonner-vue-indiens_15070888.html" target="_blank">Read online article</a>
 
@@ -30,7 +30,7 @@ title: Kassiopé Project
     <h3>Project 2016:</h3>
     <p>Published in the Courrier des Yvelines in April 2016</p>
     <div class="article_presse">
-      <%= image_tag "article_courrieryvelines2016.png", class:"article_courrieryvelines2016" %>
+      <%= image_tag "article_courrieryvelines2016.jpg", class:"article_courrieryvelines2016" %>
     </div>
 
   </div>
